[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'mibiao'
version = '0.0.1'
requires-python = '>=3.11,<3.12'
dependencies = [
    'click==8.1.7',
    'Werkzeug==3.1.3',
    'Flask==3.1.0',
    'email_validator==2.2.0',
    'WTForms==3.2.1',
    'Flask-WTF==1.2.2',
    'SQLAlchemy==2.0.36',
    'SQLAlchemy-Utils==0.41.2',
    'Flask-SQLAlchemy==3.1.1',
    'Flask-Login==0.6.3',
    'python-dotenv==1.0.1',
    'gevent==24.11.1',
    'gunicorn==23.0.0',
    'filelock==3.16.1',
]
[project.scripts]
mibiao = 'mibiao.cli:cli'

[tool.setuptools.packages.find] # https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
where = ['src']
include = ['*']

[tool.setuptools.package-data]
'*' = ['*.*']
